--- a/environment.yml
+++ b/environment.yml
@@ -12,4 +12,8 @@ dependencies:
     - jupyter
     - jupyterlab
     - livereload
+    # Fatiando a Terra packages (used to check calculations)
     - pooch
+    - verde
+    - harmonica
+    - boule
