Separate the data into 3 surveys

--- a/environment.yml
+++ b/environment.yml
@@ -12,7 +12,8 @@ dependencies:
     - jupyter
     - jupyterlab
     - livereload
-    # Fatiando a Terra packages (used to check calculations)
+    - pyproj
+    # Fatiando a Terra packages (used to check calculations and prepare data)
     - pooch
     - verde
     - harmonica
